--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
 
 <head>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-R33JEXMNXN"></script>
+<!--     <script async src="https://www.googletagmanager.com/gtag/js?id=G-R33JEXMNXN"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
         gtag('config', 'G-R33JEXMNXN');
-    </script>
+    </script> -->
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-R33JEXMNXN"></script>
+<!--     <script async src="https://www.googletagmanager.com/gtag/js?id=G-R33JEXMNXN"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
         gtag('config', 'G-R33JEXMNXN');
-    </script>
+    </script> -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -34,6 +34,8 @@
 
 
 <body>
+    <script src="chs.js"></script>
+    <script src="core.js"></script>
     <div id="splashScreen" class="splashScreen">
         <div class="pickle splashTitle splashFadeIn">I WANT TO BE A HERO</div>
     </div>
@@ -499,3 +501,19 @@
 <script src="src/music.js"></script>
 <script src="src/offline.js"></script>
 <script src="src/main.js"></script>
+<!--客服 开始-->
+<script src="//g8hh.github.io/static/js/jquery.min.js"></script>
+<link rel="stylesheet" href="//g8hh.github.io/static/css/kf.css" type="text/css" media="screen" charset="utf-8">
+<script src="//g8hh.github.io/static/js/kf.js"></script>
+<!-- 客服 结束 -->
+<!--站长统计-->
+    <div style="display: none">
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?828597e93cee632465679b7ef35edfd5";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>    </div>
